Add release build support

--- a/RNMapboxARDemo/android/gradle.properties
+++ b/RNMapboxARDemo/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_UPLOAD_STORE_FILE=coyote-ar-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=coyote-ar-alias
+MYAPP_UPLOAD_STORE_PASSWORD=password
+MYAPP_UPLOAD_KEY_PASSWORD=password
